# peerwave

./: .gitignore  Cargo.toml  Dockerfile  make.sh  notebook.txt  shell.nix
.github/workflows/: za_container.yml
assets/: tailwind.css
config/: config.json  privateKey.pem
src/: client.rs  client_on_the_server.rs  main.rs  message.rs  node.rs  server.rs  ws_types.rs
src/routes/: home.rs
