[package]
name = "peerwave"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"], optional = true }
axum-extra = { version = "0.10.1", features = ["typed-header"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4.1"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.22.1"
reqwest = { version = "0.12.20", features = ["json"] }
bincode = "2.0.1"
aes-gcm = { version = "0.10.3", features = ["getrandom"] }

[features]
default = ["axum", "axum-extra", "tower-http", "tracing", "tracing-subscriber"]
client_only = []
