[package]
name = "peerwave"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.0-alpha.2", features = ["router", "fullstack"] }
axum = { version = "0.8.4", features = ["ws"], optional = true }
axum-extra = { version = "0.10.1", features = ["typed-header"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"], optional = true }
headers = { version = "0.4.1", optional = true }
tokio = { version = "1.45.1", optional = true }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"], optional = true }
tower-http = { version = "0.6.6", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }
rsa = { version = "0.9", features = ["sha2"], optional = true }
base64 = { version = "0.22.1", optional = true }
reqwest = { version = "0.12.20", features = ["json"], optional = true }
bincode = { version = "2.0.1", optional = true }
aes-gcm = { version = "0.10.3", features = ["getrandom"], optional = true }
aes-wasm = { version = "0.1.17", optional = true }
js-sys = "0.3.77"
getrandom = { version = "0.2.16", features = ["js"] }
gloo-net = { version = "0.6.0", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }

[features]
server = ["dioxus/server", "dep:axum", "dep:axum-extra", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "tokio/full", "dep:aes-gcm", "dep:serde", "dep:serde_json", "dep:futures", "dep:futures-util", "dep:headers", "dep:tokio-tungstenite", "dep:rsa", "dep:base64", "dep:reqwest", "dep:bincode"]
default = ["web"]
web = ["dioxus/web", "dep:bincode", "dep:aes-wasm", "dep:rsa", "dep:base64", "dep:serde", "dep:serde_json", "tokio/sync", "gloo-net", "dep:futures-util", "dep:wasm-bindgen-futures"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
client_only = []



[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
